hello-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: bob2606/hello-http:0.8.26
        name: hello-http
        ports:
          - name: http
            containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 2
          failureThreshold: 2
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 4
          failureThreshold: 4
          timeoutSeconds: 1
        resources: {}
status: {}
