hello-init.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello-init
  name: hello-init
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-init
  serviceName: hello-init
  template:
    metadata:
      labels:
        app: hello-init
    spec:
      containers:
      - image: bob2606/hello-http:0.8.26
        name: hello-http
        volumeMounts:
          - name: status
            mountPath: /var/lib/hello-http
      volumes:
        - name: status
          emptyDir:
            medium: Memory  # Optionnel
