http-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http
  name: http
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http
  template:
    metadata:
      labels:
        app: http
    spec:
      containers:
      - image: nginx:1.26
        name: nginx
        ports:
          - name: http
            containerPort: 80
#        startupProbe:
#          httpGet:
#            path: /index.html
#            port: 80
#          periodSeconds: 2
#          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 2
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 5
          failureThreshold: 4
        volumeMounts:
          - name: html
            mountPath: /usr/share/nginx/html
          - name: nginx
            mountPath: /etc/nginx/conf.d
      - image: php:8.2-fpm
        name: php
        volumeMounts:
          - name: html
            mountPath: /var/www/html
      volumes:
        - name: html
          nfs:
            server: 172.18.0.1
            path: /html
        - name: nginx
          configMap:
            name: nginx-conf
