load-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: load
  name: load
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: load
    spec:
      containers:
      - image: busybox:1.28
        name: busybox
        command:
          - sh
          - -c
          - while :; do :; done
        resources:
          limits:
            cpu: 300m
          requests:
            cpu: 200m
