hello-init-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-init
  name: hello-init
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-init
  clusterIP: None
  type: ClusterIP
status:
  loadBalancer: {}
