ingress-1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: ingress-1
spec:
  ingressClassName: nginx
  rules:
  - host: hello.stage.local
    http:
      paths:
      - backend:
          service:
            name: hello
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: http.stage.local
    http:
      paths:
        - backend:
            service:
              name: http
              port:
                number: 80
          path: /
          pathType: Exact
  - http:
      paths:
        - backend:
            service:
              name: hello-init
              port:
                number: 80
          path: /h2(/|$)(.*)
          pathType: ImplementationSpecific
status:
  loadBalancer: {}
