default-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyfromall
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello
  ingress:
    - from:
      - podSelector: {}
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: test
        podSelector:
          matchLabels:
            np: ok
