denyall-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyfromall
  namespace: default
spec:
  podSelector: {}
  ingress:
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
  policyTypes:
    - Ingress
    - Egress
